# cln-opentelemetry

./: Cargo.toml  coffee.yml  flake.nix
opentelemetry-common/: Cargo.toml
opentelemetry-common/examples/: main.rs
opentelemetry-common/src/: lib.rs  log.rs
opentelemetry-plugin/: Cargo.toml
opentelemetry-plugin/src/: main.rs  plugin.rs
