[package]
name = "opentelemetry-common"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.21.0", features = ["logs"] }
opentelemetry-appender-log = { version = "0.2.0", default-features = false }
opentelemetry_sdk = { version = "0.21.2", features = [ "logs", "rt-tokio" ] }
opentelemetry-otlp = { version = "0.14.0", features = [ "logs", "tonic" ] }
opentelemetry-semantic-conventions = { version = "0.13.0"  }
anyhow = "1.0.79"
log = { version = "0.4", features = ["std"] }
