[package]
name = "opentelemetry-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc-common = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin = { git = "https://github.com/laanwj/cln4rust.git" }
clightningrpc-plugin-macros = { git = "https://github.com/laanwj/cln4rust.git" }
log = "0.4.20"
anyhow = "1.0.79"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "^1.29.1", features = ["rt-multi-thread", "parking_lot"] }
opentelemetry-log = "0.1"